Step 1 of Rewrite - CG 0.2.0
- Beginning rewriting `build.gradle`
- Redirected Cleanroom Feature Proposal Guidelines to index rather than local MD file
- Removed said `CFP_GUIDELINES.md`
- Changed paths of some actions' routines
- Modified gitignore a little
- Removed `buildSrc/`
- Rewritten versioning, though still similar to before
- Removed icon, fetch from `Resources` repository in the future
- Moved Forge's `LICENSE` back to Forge's directory
- "Mock" modules to simulate "subprojects"